--- a/myfirstapp/src/main/resources/application.properties
+++ b/myfirstapp/src/main/resources/application.properties
@@ -1,1 +1,22 @@
 spring.application.name=myfirstapp
+#management.endpoints.web.exposure.include=health,info
+management.endpoints.web.exposure.include=*
+management.info.env.enabled=true
+#Disable endpoints
+#management.endpoints.web.exposure.exclude=health,info
+info.app.name = My super cool app
+info.app.description = A crazy fun app
+info.app.version = 1.0.0
+
+coach.name=Mickey Mouse
+team.name = The mouse club
+
+
+#Change Spring boot server port
+
+#server.port=7070
+
+#Configure application context
+#All requests should be prefixed with mycoolapp
+server.servlet.context-path=/mycoolapp
+
