--- a/springhibernatejpa/src/main/resources/application.properties
+++ b/springhibernatejpa/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=springdemo
+spring.datasource.url = jdbc:mysql://localhost:3306/student_tracker
+spring.datasource.username = root
+spring.datasource.password = Jomin729@
+
+
+# Logging configs to display SQL statement
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.orm.jdbc.bind=trace
+
+#   the "update" config will not drop the table like "create" config does
+spring.jpa.hibernate.ddl-auto=update
